@@ -61,6 +61,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Changed the admin GUI to report only the bad entries in a list of email
+      addresses if any are bad.  (LP: #558253)
+
     - Added logging for template errors in HyperArch.py.  (LP: #558254)
 
     - Added more explanation to the bad owner address message from
